--- a/style.css
+++ b/style.css
@@ -75,3 +75,49 @@ header{
 #p2 button:hover{
     background-color: cyan;
 }
+#logo_sect{
+    padding: 2em 0;
+    width: 100%;
+    display: flex;
+}
+#logos{
+    width: 50%;
+    display: flex;
+    text-align: center;
+}
+#logos img{
+    width: 90%;
+    height: 90%;
+}
+#logos a{
+    text-decoration: none;
+}
+#para{
+    display: flex;
+    text-align: center;
+    width: 50%;
+    font-size: 40px;
+    justify-content: center;
+}
+#para p{
+    align-self: center;
+    max-width: 250px;
+}
+#para p a{
+    color: tomato;
+}
+#rose{
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    width: 100%;
+    background: #ee4fcb;
+}
+#tete{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+#rose p{
+    padding: .5em 0;
+}
