--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ header{
     padding: .5em 0;
 }
 #volley{
-    height: 25vh;
+    height: 35vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -210,15 +210,18 @@ footer p{
     #logo_sect{
         margin-top: 45%;
         flex-direction: column;
-        height: max-content;
+        padding-bottom: 0;
+    
     }
     #logos{
-        height: 50%;
         width: 100%;
     }
     #para{
-        margin: 1em 0 .5em 0;
-        height: 50%;
+        padding: .5em 0;
+        background-color: #d4d4d4;
+        max-width: 400px;
+        font-size: 25px;
+        margin: 1em 0 0em 0;
         width: 100%;
     }
     #rose p{
@@ -233,6 +236,10 @@ footer p{
         align-items: center;
     }
     #volley p{
+        background-color: #d4d4d4;
+        width: 100%;
+        max-width: 410px;
+        font-size: 25px;
         padding: .5em 0;
     }
     #volley{
